--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,4 @@
-
+/**html tags custom*/
 body{
   color: #40514e;
   margin: 0px;
@@ -35,6 +35,8 @@ hr{
   margin-top: 40px;
   margin-bottom: 10px;
 }
+
+/*Top container**/
 .top-container{
   background-color: #EAF6F6;
   padding-top: 150px;
@@ -48,6 +50,7 @@ hr{
   top: 40px;
 }
 
+/**middle container*/
 .middle-container{
   margin: 50px 0;
   
@@ -92,28 +95,10 @@ hr{
   margin-right: 30px;
   justify-content: center;
 }
+
+/**bottam container**/
 .bottom-container{  
   background-color:#66BFBF;
-}
-.copyright{
-  color: #EAF6F6;
-  height: 20px;
-  font-size: 13px;
-  padding-top: 10px;
-  font-family: arial,sans-serif;
-}
-.contact-links{
-  padding:30px 0;
-}
-
-.footer-link{
-  color: #11999E;
-  margin-right: 15px;
-  font-family: 'Montserrat', sans-serif;
-  text-decoration: none;
-}
-.footer-link:hover{
-  color: #EAF6F6;
 }
 .btn-shuja {
   margin-top: 20px;
@@ -150,5 +135,27 @@ hr{
   border-radius: 8px;
   text-decoration: none;
 }
+.copyright{
+  color: #EAF6F6;
+  height: 20px;
+  font-size: 13px;
+  padding-top: 10px;
+  font-family: arial,sans-serif;
+}
+.contact-links{
+  padding:30px 0;
+}
+
+/**page Footer*/
+.footer-link{
+  color: #11999E;
+  margin-right: 15px;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+}
+.footer-link:hover{
+  color: #EAF6F6;
+}
+
 
   
